--- a/source/2014-05-29-reborn.html.markdown
+++ b/source/2014-05-29-reborn.html.markdown
@@ -1,7 +1,7 @@
 ---
 title: Reborn
 date: 2014-05-29 15:46 UTC
-tags: open government
+tags: open government, life
 ---
 
 Great plans for the weekend! On saturday I will be attending the weekly meetup of [Congreso Interactivo](http://www.congresointeractivo.org/) at 
