Correct last blog post.

--- a/source/posts/2014-06-03-shulgin.html.markdown
+++ b/source/posts/2014-06-03-shulgin.html.markdown
@@ -6,7 +6,7 @@ tags: life
 
 Yesterday at 5pm, Alexander "Sasha" Shulgin passed away.
 
-`pmoriarty` summarized on HackerNews all my feelings for Shulgin's work and legacy.
+`pmoriarty` summarized on Hacker News all my feelings for Shulgin's inspiring work and legacy.
 
 > He synthesized and carefully chronicled the effects of hundreds of psychoactive compounds on himself and a small, dedicated core group of explorers of human consciousness.
 
@@ -26,4 +26,9 @@ Yesterday at 5pm, Alexander "Sasha" Shulgin passed away.
 
 > Shulgin's pioneering work inspired generations of chemists, self-experimenters, and explorers. He was well known, loved, and respected as one of the most highly accomplished psychedelic chemists in history. His presence and guidance will be deeply missed.
 
-He will, for sure. RIP Sasha.
+*Gate gate*  
+*Para gate*  
+*Para sam gate*  
+*Bodhi Svaha!*
+
+Godspeed, Sasha.
