--- a/source/posts/2014-06-26-rake-0-9.html.markdown
+++ b/source/posts/2014-06-26-rake-0-9.html.markdown
@@ -3,7 +3,8 @@ title: Rake 0.9
 date: 2014-06-26 04:50 UTC
 tags: ruby, tips
 ---
-I just found out about something cool introduced on Rake 0.9. Take a look at this:
+Reading `bbatsov`'s [blog](http://batsov.com/articles/2014/05/30/find-out-where-a-rake-task-is-defined/) (Rubocop creator), I found out about something
+cool introduced on Rake 0.9. Take a look at this:
 
 ```bash
 $ rake -W publish
