--- a/source/posts/2014-06-03-shulgin.html.markdown
+++ b/source/posts/2014-06-03-shulgin.html.markdown
@@ -2,6 +2,7 @@
 title: Shulgin
 date: 2014-06-03 17:32 UTC
 tags: life
+author: svankmajer
 ---
 
 Yesterday at 5pm, Alexander "Sasha" Shulgin passed away.
