--- a/source/posts/2014-06-04-git-stash.html.markdown
+++ b/source/posts/2014-06-04-git-stash.html.markdown
@@ -2,6 +2,7 @@
 title: Git - Stashing (annex)
 date: 2014-06-04 18:12 UTC
 tags: programming, git
+author: svankmajer
 ---
 
 You all know about good ol' `git-stash`. If you happen to don't know about it, don't worry and, please, fearlessly run:
